# bevy_2048

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html
.cargo/: config.toml
fig/: bevy2048_entity.drawio  bevy2048_states.drawio
src/: bundle.rs  components.rs  constants.rs  error.rs  events.rs  main.rs  plugins.rs  resources.rs  states.rs  structs.rs  systems.rs  title_menu.rs
src/bundle/: background_board.rs  main_board.rs  main_menu.rs  score_board.rs  tile.rs
src/components/: main_board.rs  main_menu.rs  menu_button_action.rs  position.rs  score_board.rs  tile.rs
src/constants/: color.rs  font.rs  layout.rs
src/events/: move_event.rs  player_input_event.rs
src/plugins/: calculate.rs  game_over.rs  game_plugin_group.rs  input.rs  main_menu.rs  movement.rs  setup.rs  spawn.rs  title_menu.rs
src/resources/: best_score.rs  score.rs
src/states/: calculate.rs  game_state.rs  input.rs
src/structs/: grid_array.rs  quater_turn.rs
src/systems/: background_board.rs  position.rs  tile.rs
src/title_menu/: bundle.rs  component.rs  plugin.rs  system.rs
src/title_menu/constant/: color.rs  font.rs  layout.rs
src/util/: position.rs  tile.rs
