[package]
name = "bevy_2048"
version = "0.1.0"
authors = ["dragoon8192 <dragoon8192@gmail.com>"]
description = "The 2048 Game on Bevy"
license = "MIT"
repository = "https://github.com/dragoon8192/bevy_2048"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.13.0"
bevy_prng = "0.5.2"
bevy_rand = { version = "0.5.2", features = ["rand_chacha", "wyrand"] }
itertools = "0.12.1"
rand_core = "0.6.4"
strum = "0.26.2"
strum_macros = "0.26.2"
